Box-sizing bug, align of icon help

--- a/src/css/chat-styles.css
+++ b/src/css/chat-styles.css
@@ -351,12 +351,13 @@
 	color: #455A64;
 	font-size: 16px;
 	padding: 20px 20px 0 20px;
-	height: 37px;
+	height: 58px;
 	margin: 0;
 	font-weight: bold;
 	text-align: center;
 	background: #fff;
 	border-bottom: 1px solid #DADEE2;
+	box-sizing: border-box;
 }
 
 .prudio-window h3 .minimize i,
